src/xf/nucleus/kdef/KDefParser.d
module xf.nucleus.kdef.KDefParser;
private {
	import xf.nucleus.Value;
	import xf.nucleus.Code;
	import xf.nucleus.kdef.KDefToken;
	import xf.nucleus.Function;
	import xf.nucleus.kdef.Common;
	import xf.nucleus.kdef.KDefParserBase;
	import xf.nucleus.kernel.KernelDef;
	
	alias char[] string;
}
debug import tango.io.Stdout;

class KDefParser:KDefParserBase{
	static char[] getHelp(){
		return "";
	}

	/*
	Syntax
		= void parseSyntax(Statement[] statements)
		::= Statement:~statements* eoi;

	*/
	bool value_Syntax;
	bool parse_Syntax(){
		size_t startPos_Syntax = pos;
		debug Stdout("parse_Syntax").newline;
		Statement[] var_statements;

		// Iterator
		start2:
			// (terminator)
				// Production
				if(parse_eoi()){
					goto end3;
				}
			// (expression)
			expr4:
				// Production
				if(!parse_Statement()){
					goto fail1;
				}
				smartAppend(var_statements,value_Statement);
			goto start2;
		end3:
		// Rule
		pass0:
			startPos_this = startPos_Syntax;
			endPos_this = pos;
			parseSyntax(var_statements);
			debug Stdout("passed").newline;
			return true;
		fail1:
			debug Stdout.format("\tparse_Syntax failed").newline;
			return false;
	}

	/*
	Statement
		= Statement st
		::= AssignStatement:st | ImportStatement:st | ConnectStatement:st | NoAutoFlowStatement:st | ConverterDeclStatement:st;

	*/
	Statement value_Statement;
	bool parse_Statement(){
		size_t startPos_Statement = pos;
		debug Stdout("parse_Statement").newline;
		Statement var_st;

		// OrGroup pass0
			// Production
			if(parse_AssignStatement()){
				smartAssign(var_st,value_AssignStatement);
				goto pass0;
			}
		term2:
			// Production
			if(parse_ImportStatement()){
				smartAssign(var_st,value_ImportStatement);
				goto pass0;
			}
		term3:
			// Production
			if(parse_ConnectStatement()){
				smartAssign(var_st,value_ConnectStatement);
				goto pass0;
			}
		term4:
			// Production
			if(parse_NoAutoFlowStatement()){
				smartAssign(var_st,value_NoAutoFlowStatement);
				goto pass0;
			}
		term5:
			// Production
			if(!parse_ConverterDeclStatement()){
				goto fail1;
			}
			smartAssign(var_st,value_ConverterDeclStatement);
		// Rule
		pass0:
			startPos_this = startPos_Statement;
			endPos_this = pos;
			value_Statement = var_st;
			debug Stdout.format("\tparse_Statement passed: {0}",value_Statement).newline;
			return true;
		fail1:
			value_Statement = (Statement).init;
			debug Stdout.format("\tparse_Statement failed").newline;
			return false;
	}

	/*
	ConnectStatement
		= ConnectStatement createConnectStatement(string from,string to)
		::= "connect" Identifier:from Identifier:to ";";

	*/
	ConnectStatement value_ConnectStatement;
	bool parse_ConnectStatement(){
		size_t startPos_ConnectStatement = pos;
		debug Stdout("parse_ConnectStatement").newline;
		string var_from;
		string var_to;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("connect")){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_from,value_Identifier);
			term6:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_to,value_Identifier);
			term7:
				// Terminal
				if(match(";")){
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_ConnectStatement;
			endPos_this = pos;
			value_ConnectStatement = createConnectStatement(var_from,var_to);
			debug Stdout.format("\tparse_ConnectStatement passed: {0}",value_ConnectStatement).newline;
			return true;
		fail1:
			value_ConnectStatement = (ConnectStatement).init;
			debug Stdout.format("\tparse_ConnectStatement failed").newline;
			return false;
	}

	/*
	NoAutoFlowStatement
		= NoAutoFlowStatement createNoAutoFlowStatement(string to)
		::= "noauto" Identifier:to ";";

	*/
	NoAutoFlowStatement value_NoAutoFlowStatement;
	bool parse_NoAutoFlowStatement(){
		size_t startPos_NoAutoFlowStatement = pos;
		debug Stdout("parse_NoAutoFlowStatement").newline;
		string var_to;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("noauto")){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_to,value_Identifier);
			term6:
				// Terminal
				if(match(";")){
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_NoAutoFlowStatement;
			endPos_this = pos;
			value_NoAutoFlowStatement = createNoAutoFlowStatement(var_to);
			debug Stdout.format("\tparse_NoAutoFlowStatement passed: {0}",value_NoAutoFlowStatement).newline;
			return true;
		fail1:
			value_NoAutoFlowStatement = (NoAutoFlowStatement).init;
			debug Stdout.format("\tparse_NoAutoFlowStatement failed").newline;
			return false;
	}

	/*
	AssignStatement
		= AssignStatement createAssignStatement(string name,Value value)
		::= Identifier:name "=" Value:value ?!("\';\' expected") ";";

	*/
	AssignStatement value_AssignStatement;
	bool parse_AssignStatement(){
		size_t startPos_AssignStatement = pos;
		debug Stdout("parse_AssignStatement").newline;
		Value var_value;
		string var_name;

		// AndGroup
			auto position3 = pos;
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_name,value_Identifier);
			term5:
				// Terminal
				if(!match("=")){
					goto fail4;
				}
			term6:
				// Production
				if(!parse_Value()){
					goto fail4;
				}
				smartAssign(var_value,value_Value);
			term7:
				// ErrorPoint
					// Terminal
					if(match(";")){
						goto pass0;
					}
				fail8:
					error("\';\' expected");
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_AssignStatement;
			endPos_this = pos;
			value_AssignStatement = createAssignStatement(var_name,var_value);
			debug Stdout.format("\tparse_AssignStatement passed: {0}",value_AssignStatement).newline;
			return true;
		fail1:
			value_AssignStatement = (AssignStatement).init;
			debug Stdout.format("\tparse_AssignStatement failed").newline;
			return false;
	}

	/*
	ImportStatement
		= ImportStatement createImportStatement(string name,string[] what)
		::= "import" String:name [":" WildcardIdentifier:~what* % ","] ";";

	*/
	ImportStatement value_ImportStatement;
	bool parse_ImportStatement(){
		size_t startPos_ImportStatement = pos;
		debug Stdout("parse_ImportStatement").newline;
		string var_name;
		string[] var_what;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("import")){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_String()){
					goto fail4;
				}
				smartAssign(var_name,value_String);
			term6:
				// Optional
					// AndGroup
						auto position9 = pos;
							// Terminal
							if(!match(":")){
								goto fail10;
							}
						term11:
							// Iterator
							size_t counter16 = 0;
							start12:
								// (terminator)
								if(!hasMore()){
									goto end13;
								}
								// (delimeter)
								delim15:
								if(counter16 > 0){
									// Terminal
									if(!match(",")){
										goto end13;
									}
								}
								// (expression)
								expr14:
									// Production
									if(!parse_WildcardIdentifier()){
										goto end13;
									}
									smartAppend(var_what,value_WildcardIdentifier);
								increment17:
								// (increment expr count)
									counter16 ++;
								goto start12;
							end13:
								goto term7;
						fail10:
						pos = position9;
						goto term7;
			term7:
				// Terminal
				if(match(";")){
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_ImportStatement;
			endPos_this = pos;
			value_ImportStatement = createImportStatement(var_name,var_what);
			debug Stdout.format("\tparse_ImportStatement passed: {0}",value_ImportStatement).newline;
			return true;
		fail1:
			value_ImportStatement = (ImportStatement).init;
			debug Stdout.format("\tparse_ImportStatement failed").newline;
			return false;
	}

	/*
	WildcardIdentifier
		= string name
		::= (Identifier "*"):name | Identifier:name;

	*/
	string value_WildcardIdentifier;
	bool parse_WildcardIdentifier(){
		size_t startPos_WildcardIdentifier = pos;
		debug Stdout("parse_WildcardIdentifier").newline;
		string var_name;

		// OrGroup pass0
			// Group (w/binding)
				auto position3 = pos;
				// AndGroup
					auto position6 = pos;
						// Production
						if(!parse_Identifier()){
							goto fail7;
						}
					term8:
						// Terminal
						if(match("*")){
							goto pass4;
						}
					fail7:
					pos = position6;
					goto term2;
				pass4:
				smartAssign(var_name,slice(position3,pos));
				goto pass0;
		term2:
			// Production
			if(!parse_Identifier()){
				goto fail1;
			}
			smartAssign(var_name,value_Identifier);
		// Rule
		pass0:
			startPos_this = startPos_WildcardIdentifier;
			endPos_this = pos;
			value_WildcardIdentifier = var_name;
			debug Stdout.format("\tparse_WildcardIdentifier passed: {0}",value_WildcardIdentifier).newline;
			return true;
		fail1:
			value_WildcardIdentifier = (string).init;
			debug Stdout.format("\tparse_WildcardIdentifier failed").newline;
			return false;
	}

	/*
	ConverterDeclStatement
		= ConverterDeclStatement createConverter(string name,string[] tags,ParamDef[] params,Code code,double cost)
		::= "converter" ["<" KernelTagList:tags ">"] "(" Number:cost ")" [Identifier:name] ParamList:params Code:code;

	*/
	ConverterDeclStatement value_ConverterDeclStatement;
	bool parse_ConverterDeclStatement(){
		size_t startPos_ConverterDeclStatement = pos;
		debug Stdout("parse_ConverterDeclStatement").newline;
		string var_name;
		double var_cost;
		string[] var_tags;
		ParamDef[] var_params;
		Code var_code;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("converter")){
					goto fail4;
				}
			term5:
				// Optional
					// AndGroup
						auto position8 = pos;
							// Terminal
							if(!match("<")){
								goto fail9;
							}
						term10:
							// Production
							if(!parse_KernelTagList()){
								goto fail9;
							}
							smartAssign(var_tags,value_KernelTagList);
						term11:
							// Terminal
							if(match(">")){
								goto term6;
							}
						fail9:
						pos = position8;
						goto term6;
			term6:
				// Terminal
				if(!match("(")){
					goto fail4;
				}
			term12:
				// Production
				if(!parse_Number()){
					goto fail4;
				}
				smartAssign(var_cost,value_Number);
			term13:
				// Terminal
				if(!match(")")){
					goto fail4;
				}
			term14:
				// Optional
					// Production
					if(!parse_Identifier()){
						goto term15;
					}
					smartAssign(var_name,value_Identifier);
			term15:
				// Production
				if(!parse_ParamList()){
					goto fail4;
				}
				smartAssign(var_params,value_ParamList);
			term16:
				// Production
				if(parse_Code()){
					smartAssign(var_code,value_Code);
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_ConverterDeclStatement;
			endPos_this = pos;
			value_ConverterDeclStatement = createConverter(var_name,var_tags,var_params,var_code,var_cost);
			debug Stdout.format("\tparse_ConverterDeclStatement passed: {0}",value_ConverterDeclStatement).newline;
			return true;
		fail1:
			value_ConverterDeclStatement = (ConverterDeclStatement).init;
			debug Stdout.format("\tparse_ConverterDeclStatement failed").newline;
			return false;
	}

	/*
	KernelDefValue
		= KernelDefValue value
		::= ConcreteKernelDefValue:value | AbstractKernelDefValue:value;

	*/
	KernelDefValue value_KernelDefValue;
	bool parse_KernelDefValue(){
		size_t startPos_KernelDefValue = pos;
		debug Stdout("parse_KernelDefValue").newline;
		KernelDefValue var_value;

		// OrGroup pass0
			// Production
			if(parse_ConcreteKernelDefValue()){
				smartAssign(var_value,value_ConcreteKernelDefValue);
				goto pass0;
			}
		term2:
			// Production
			if(!parse_AbstractKernelDefValue()){
				goto fail1;
			}
			smartAssign(var_value,value_AbstractKernelDefValue);
		// Rule
		pass0:
			startPos_this = startPos_KernelDefValue;
			endPos_this = pos;
			value_KernelDefValue = var_value;
			debug Stdout.format("\tparse_KernelDefValue passed: {0}",value_KernelDefValue).newline;
			return true;
		fail1:
			value_KernelDefValue = (KernelDefValue).init;
			debug Stdout.format("\tparse_KernelDefValue failed").newline;
			return false;
	}

	/*
	ConcreteKernelDefValue
		= KernelDefValue createKernelDefValue(string superKernel,ParamDef[] params,Code code,string[] tags)
		::= "kernel" ["<" KernelTagList:tags ">"] [Identifier:superKernel] [ParamList:params] Code:code;

	*/
	KernelDefValue value_ConcreteKernelDefValue;
	bool parse_ConcreteKernelDefValue(){
		size_t startPos_ConcreteKernelDefValue = pos;
		debug Stdout("parse_ConcreteKernelDefValue").newline;
		string[] var_tags;
		ParamDef[] var_params;
		string var_superKernel;
		Code var_code;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("kernel")){
					goto fail4;
				}
			term5:
				// Optional
					// AndGroup
						auto position8 = pos;
							// Terminal
							if(!match("<")){
								goto fail9;
							}
						term10:
							// Production
							if(!parse_KernelTagList()){
								goto fail9;
							}
							smartAssign(var_tags,value_KernelTagList);
						term11:
							// Terminal
							if(match(">")){
								goto term6;
							}
						fail9:
						pos = position8;
						goto term6;
			term6:
				// Optional
					// Production
					if(!parse_Identifier()){
						goto term12;
					}
					smartAssign(var_superKernel,value_Identifier);
			term12:
				// Optional
					// Production
					if(!parse_ParamList()){
						goto term13;
					}
					smartAssign(var_params,value_ParamList);
			term13:
				// Production
				if(parse_Code()){
					smartAssign(var_code,value_Code);
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_ConcreteKernelDefValue;
			endPos_this = pos;
			value_ConcreteKernelDefValue = createKernelDefValue(var_superKernel,var_params,var_code,var_tags);
			debug Stdout.format("\tparse_ConcreteKernelDefValue passed: {0}",value_ConcreteKernelDefValue).newline;
			return true;
		fail1:
			value_ConcreteKernelDefValue = (KernelDefValue).init;
			debug Stdout.format("\tparse_ConcreteKernelDefValue failed").newline;
			return false;
	}

	/*
	AbstractKernelDefValue
		= KernelDefValue createKernelDefValue(string superKernel,ParamDef[] params,Code code,string[] tags)
		::= "kernel" ["<" KernelTagList:tags ">"] [Identifier:superKernel] ParamList:params;

	*/
	KernelDefValue value_AbstractKernelDefValue;
	bool parse_AbstractKernelDefValue(){
		size_t startPos_AbstractKernelDefValue = pos;
		debug Stdout("parse_AbstractKernelDefValue").newline;
		string[] var_tags;
		ParamDef[] var_params;
		string var_superKernel;
		Code var_code;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("kernel")){
					goto fail4;
				}
			term5:
				// Optional
					// AndGroup
						auto position8 = pos;
							// Terminal
							if(!match("<")){
								goto fail9;
							}
						term10:
							// Production
							if(!parse_KernelTagList()){
								goto fail9;
							}
							smartAssign(var_tags,value_KernelTagList);
						term11:
							// Terminal
							if(match(">")){
								goto term6;
							}
						fail9:
						pos = position8;
						goto term6;
			term6:
				// Optional
					// Production
					if(!parse_Identifier()){
						goto term12;
					}
					smartAssign(var_superKernel,value_Identifier);
			term12:
				// Production
				if(parse_ParamList()){
					smartAssign(var_params,value_ParamList);
					goto pass0;
				}
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_AbstractKernelDefValue;
			endPos_this = pos;
			value_AbstractKernelDefValue = createKernelDefValue(var_superKernel,var_params,var_code,var_tags);
			debug Stdout.format("\tparse_AbstractKernelDefValue passed: {0}",value_AbstractKernelDefValue).newline;
			return true;
		fail1:
			value_AbstractKernelDefValue = (KernelDefValue).init;
			debug Stdout.format("\tparse_AbstractKernelDefValue failed").newline;
			return false;
	}

	/*
	GraphDefValue
		= GraphDefValue createGraphDefValue(string superKernel,Statement[] stmts)
		::= "graph" [Identifier:superKernel] "{" Statement:~stmts* "}";

	*/
	GraphDefValue value_GraphDefValue;
	bool parse_GraphDefValue(){
		size_t startPos_GraphDefValue = pos;
		debug Stdout("parse_GraphDefValue").newline;
		Statement[] var_stmts;
		string var_superKernel;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("graph")){
					goto fail4;
				}
			term5:
				// Optional
					// Production
					if(!parse_Identifier()){
						goto term6;
					}
					smartAssign(var_superKernel,value_Identifier);
			term6:
				// Terminal
				if(!match("{")){
					goto fail4;
				}
			term7:
				// Iterator
				start8:
					// (terminator)
						// Terminal
						if(match("}")){
							goto end9;
						}
					// (expression)
					expr10:
						// Production
						if(!parse_Statement()){
							goto fail4;
						}
						smartAppend(var_stmts,value_Statement);
					goto start8;
				end9:
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_GraphDefValue;
			endPos_this = pos;
			value_GraphDefValue = createGraphDefValue(var_superKernel,var_stmts);
			debug Stdout.format("\tparse_GraphDefValue passed: {0}",value_GraphDefValue).newline;
			return true;
		fail1:
			value_GraphDefValue = (GraphDefValue).init;
			debug Stdout.format("\tparse_GraphDefValue failed").newline;
			return false;
	}

	/*
	GraphDefNodeValue
		= GraphDefNodeValue createGraphDefNodeValue(VarDef[] vars)
		::= "node" "{" VarDef:~vars* "}";

	*/
	GraphDefNodeValue value_GraphDefNodeValue;
	bool parse_GraphDefNodeValue(){
		size_t startPos_GraphDefNodeValue = pos;
		debug Stdout("parse_GraphDefNodeValue").newline;
		VarDef[] var_vars;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("node")){
					goto fail4;
				}
			term5:
				// Terminal
				if(!match("{")){
					goto fail4;
				}
			term6:
				// Iterator
				start7:
					// (terminator)
						// Terminal
						if(match("}")){
							goto end8;
						}
					// (expression)
					expr9:
						// Production
						if(!parse_VarDef()){
							goto fail4;
						}
						smartAppend(var_vars,value_VarDef);
					goto start7;
				end8:
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_GraphDefNodeValue;
			endPos_this = pos;
			value_GraphDefNodeValue = createGraphDefNodeValue(var_vars);
			debug Stdout.format("\tparse_GraphDefNodeValue passed: {0}",value_GraphDefNodeValue).newline;
			return true;
		fail1:
			value_GraphDefNodeValue = (GraphDefNodeValue).init;
			debug Stdout.format("\tparse_GraphDefNodeValue failed").newline;
			return false;
	}

	/*
	TraitDefValue
		= TraitDefValue createTraitDefValue(string[] values,string defaultValue)
		::= "trait" "{" Identifier:~values % "," "}" ["=" ?!("default value identifier exptected") Identifier:defaultValue];

	*/
	TraitDefValue value_TraitDefValue;
	bool parse_TraitDefValue(){
		size_t startPos_TraitDefValue = pos;
		debug Stdout("parse_TraitDefValue").newline;
		string[] var_values;
		string var_defaultValue;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("trait")){
					goto fail4;
				}
			term5:
				// Terminal
				if(!match("{")){
					goto fail4;
				}
			term6:
				// Iterator
				size_t counter12 = 0;
				start8:
					// (terminator)
						// Terminal
						if(match("}")){
							goto end9;
						}
					// (delimeter)
					delim11:
					if(counter12 > 0){
						// Terminal
						if(!match(",")){
							goto fail4;
						}
					}
					// (expression)
					expr10:
						// Production
						if(!parse_Identifier()){
							goto fail4;
						}
						smartAppend(var_values,value_Identifier);
					increment13:
					// (increment expr count)
						counter12 ++;
					goto start8;
				end9:
			term7:
				// Optional
					// AndGroup
						auto position15 = pos;
							// Terminal
							if(!match("=")){
								goto fail16;
							}
						term17:
							// ErrorPoint
								// Production
								if(parse_Identifier()){
									smartAssign(var_defaultValue,value_Identifier);
									goto pass0;
								}
							fail18:
								error("default value identifier exptected");
						fail16:
						pos = position15;
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_TraitDefValue;
			endPos_this = pos;
			value_TraitDefValue = createTraitDefValue(var_values,var_defaultValue);
			debug Stdout.format("\tparse_TraitDefValue passed: {0}",value_TraitDefValue).newline;
			return true;
		fail1:
			value_TraitDefValue = (TraitDefValue).init;
			debug Stdout.format("\tparse_TraitDefValue failed").newline;
			return false;
	}

	/*
	SurfaceDefValue
		= SurfaceDefValue createSurfaceDefValue(string reflKernel,VarDef[] vars)
		::= "surface" Identifier:reflKernel "{" VarDef:~vars* "}";

	*/
	SurfaceDefValue value_SurfaceDefValue;
	bool parse_SurfaceDefValue(){
		size_t startPos_SurfaceDefValue = pos;
		debug Stdout("parse_SurfaceDefValue").newline;
		string var_reflKernel;
		VarDef[] var_vars;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("surface")){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_reflKernel,value_Identifier);
			term6:
				// Terminal
				if(!match("{")){
					goto fail4;
				}
			term7:
				// Iterator
				start8:
					// (terminator)
						// Terminal
						if(match("}")){
							goto end9;
						}
					// (expression)
					expr10:
						// Production
						if(!parse_VarDef()){
							goto fail4;
						}
						smartAppend(var_vars,value_VarDef);
					goto start8;
				end9:
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_SurfaceDefValue;
			endPos_this = pos;
			value_SurfaceDefValue = createSurfaceDefValue(var_reflKernel,var_vars);
			debug Stdout.format("\tparse_SurfaceDefValue passed: {0}",value_SurfaceDefValue).newline;
			return true;
		fail1:
			value_SurfaceDefValue = (SurfaceDefValue).init;
			debug Stdout.format("\tparse_SurfaceDefValue failed").newline;
			return false;
	}

	/*
	MaterialDefValue
		= MaterialDefValue createMaterialDefValue(string materialKernel,VarDef[] vars)
		::= "material" Identifier:materialKernel "{" VarDef:~vars* "}";

	*/
	MaterialDefValue value_MaterialDefValue;
	bool parse_MaterialDefValue(){
		size_t startPos_MaterialDefValue = pos;
		debug Stdout("parse_MaterialDefValue").newline;
		VarDef[] var_vars;
		string var_materialKernel;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("material")){
					goto fail4;
				}
			term5:
				// Production
				if(!parse_Identifier()){
					goto fail4;
				}
				smartAssign(var_materialKernel,value_Identifier);
			term6:
				// Terminal
				if(!match("{")){
					goto fail4;
				}
			term7:
				// Iterator
				start8:
					// (terminator)
						// Terminal
						if(match("}")){
							goto end9;
						}
					// (expression)
					expr10:
						// Production
						if(!parse_VarDef()){
							goto fail4;
						}
						smartAppend(var_vars,value_VarDef);
					goto start8;
				end9:
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_MaterialDefValue;
			endPos_this = pos;
			value_MaterialDefValue = createMaterialDefValue(var_materialKernel,var_vars);
			debug Stdout.format("\tparse_MaterialDefValue passed: {0}",value_MaterialDefValue).newline;
			return true;
		fail1:
			value_MaterialDefValue = (MaterialDefValue).init;
			debug Stdout.format("\tparse_MaterialDefValue failed").newline;
			return false;
	}

	/*
	SamplerDefValue
		= SamplerDefValue createSamplerDefValue(VarDef[] vars)
		::= "sampler" "{" VarDef:~vars* "}";

	*/
	SamplerDefValue value_SamplerDefValue;
	bool parse_SamplerDefValue(){
		size_t startPos_SamplerDefValue = pos;
		debug Stdout("parse_SamplerDefValue").newline;
		VarDef[] var_vars;

		// AndGroup
			auto position3 = pos;
				// Terminal
				if(!match("sampler")){
					goto fail4;
				}
			term5:
				// Terminal
				if(!match("{")){
					goto fail4;
				}
			term6:
				// Iterator
				start7:
					// (terminator)
						// Terminal
						if(match("}")){
							goto end8;
						}
					// (expression)
					expr9:
						// Production
						if(!parse_VarDef()){
							goto fail4;
						}
						smartAppend(var_vars,value_VarDef);
					goto start7;
				end8:
					goto pass0;
			fail4:
			pos = position3;
			goto fail1;
		// Rule
		pass0:
			startPos_this = startPos_SamplerDefValue;
			endPos_this = pos;
			value_SamplerDefValue = createSamplerDefValue(var_vars);
			debug Stdout.format("\tparse_SamplerDefValue passed: {0}",value_SamplerDefValue).newline;
			return true;
